--- a/build.gradle
+++ b/build.gradle
@@ -13,7 +13,7 @@ plugins {
     // Apply the application plugin to add support for building a CLI application.
     id 'application'
 
-    //add by iser
+    //add byuser
     id 'com.bmuschko.clover' version '2.2.3'
 }
 
@@ -36,7 +36,6 @@ dependencies {
     //add by user
     compile 'org.json:json:20180813'
     clover 'org.openclover:clover:4.3.1'
-
 }
 
 test {
@@ -46,14 +45,14 @@ test {
   }
 }
 clover {
-   compiler{
+  compiler{
      additionalArgs = "-g:lines,source,vars"
-   } 
+  } 
 }
 
 application {
     // Define the main class for the application.
-    mainClassName = 'yy258.json.App'
+    mainClassName = 'edu.duke.ece651.classbuilder.App'
 }
 
 test {
