--- a/settings.gradle
+++ b/settings.gradle
@@ -7,4 +7,4 @@
  * in the user manual at https://docs.gradle.org/6.0.1/userguide/multi_project_builds.html
  */
 
-rootProject.name = 'yy258-json-651'
+rootProject.name = 'classbuilder'
